--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.0.5",
     "axios": "^0.19.2",
+    "history": "^4.10.1",
     "immer": "^5.3.6",
     "polished": "^3.4.4",
     "react": "16.9.0",
